@@ -170,6 +170,9 @@ RELEASE 0.95 - XXX
   - Fix the M4 Builder so that it chdirs to the Repository directory
     when the input file is in the source directory of a BuildDir.
 
+  - Save memory at build time by allowing Nodes to delete their build
+    environments after they've been built.
+
   From Vincent Risi:
 
   - Add support for the bcc32, ilink32 and tlib Borland tools.
